# CameraApp

./: config.xml  package-lock.json  package.json
OpenCVCameraPlugin/: package.json  plugin.xml
OpenCVCameraPlugin/src/android/: CMakeLists.txt  OpenCVCameraPlugin.java
OpenCVCameraPlugin/src/android/sdk/native/jni/: OpenCV.mk
OpenCVCameraPlugin/src/android/sdk/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
OpenCVCameraPlugin/src/android/sdk/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake
OpenCVCameraPlugin/src/android/sdk/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
OpenCVCameraPlugin/src/android/sdk/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
OpenCVCameraPlugin/src/cpp/: scannerLite.cpp
OpenCVCameraPlugin/src/ios/: OpenCVCameraPlugin.m
OpenCVCameraPlugin/www/: OpenCVCameraPlugin.js
plugins/: android.json
plugins/cordova-plugin-android-permissions/: package.json
plugins/cordova-plugin-whitelist/: package.json
